stylesheet.less
/* ... */
.widget {
	clear: both;
}

body {
	background: image('/images/background.jpg') no-repeat top left;
	background-attachment: fixed;
	min-height:100%;
	background-size: auto 100%;
	background-repeat: repeat;
}

html, body {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
}

h1 {
	font-family:@font-swatch1-font-family; 
	font-weight: @font-swatch1-font-weight; 
	color:@font-swatch1-color; 
	line-height:@font-swatch1-line-height; 
	letter-spacing: @font-swatch1-letter-spacing; 
	font-size: @font-swatch1-font-size;
	a {
		font-family:@font-swatch1-font-family; 
		font-weight: @font-swatch1-font-weight; 
		line-height:@font-swatch1-line-height; 
		letter-spacing: @font-swatch1-letter-spacing; 
		font-size: @font-swatch1-font-size;
	}
}

h2 {
	font-family:@font-swatch2-font-family; 
	font-weight: @font-swatch2-font-weight; 
	color:@font-swatch2-color; 
	line-height:@font-swatch2-line-height; 
	letter-spacing: @font-swatch2-letter-spacing; 
	font-size: @font-swatch2-font-size;
	a {
		font-family:@font-swatch2-font-family; 
		font-weight: @font-swatch2-font-weight; 
		line-height:@font-swatch2-line-height; 
		letter-spacing: @font-swatch2-letter-spacing; 
		font-size: @font-swatch2-font-size;
	}
}

h3 {
	font-family:@font-swatch3-font-family; 
	font-weight: @font-swatch3-font-weight; 
	color:@font-swatch3-color; 
	line-height:@font-swatch3-line-height; 
	letter-spacing: @font-swatch3-letter-spacing; 
	font-size: @font-swatch3-font-size;
	a {
		font-family:@font-swatch3-font-family; 
		font-weight: @font-swatch3-font-weight; 
		line-height:@font-swatch3-line-height; 
		letter-spacing: @font-swatch3-letter-spacing; 
		font-size: @font-swatch3-font-size;
	}
}

h4 {
	font-family:@font-swatch4-font-family; 
	font-weight: @font-swatch4-font-weight; 
	color:@font-swatch4-color; 
	line-height:@font-swatch4-line-height; 
	letter-spacing: @font-swatch4-letter-spacing; 
	font-size: @font-swatch4-font-size;
	a {
		font-family:@font-swatch4-font-family; 
		font-weight: @font-swatch4-font-weight; 
		line-height:@font-swatch4-line-height; 
		letter-spacing: @font-swatch4-letter-spacing; 
		font-size: @font-swatch4-font-size;
	}
}

h5 {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
	a {
		font-family:@font-swatch5-font-family;
		font-weight: @font-swatch5-font-weight;
		line-height:@font-swatch5-line-height;
		letter-spacing: @font-swatch5-letter-spacing;
		font-size: @font-swatch5-font-size;
	}
}

h6 {
	font-family:@font-swatch6-font-family;
	font-weight: @font-swatch6-font-weight;
	color:@font-swatch6-color;
	line-height:@font-swatch6-line-height;
	letter-spacing: @font-swatch6-letter-spacing;
	font-size: @font-swatch6-font-size;
	a {
		font-family:@font-swatch6-font-family;
		font-weight: @font-swatch6-font-weight;
		line-height:@font-swatch6-line-height;
		letter-spacing: @font-swatch6-letter-spacing;
		font-size: @font-swatch6-font-size;
	}
}

.widget.companyname {
	font-family:@font-swatch10-font-family;
	font-weight: @font-swatch10-font-weight;
	color:@font-swatch10-color;
	line-height:@font-swatch10-line-height;
	letter-spacing: @font-swatch10-letter-spacing;
	font-size: @font-swatch10-font-size;
	a {
		color:@font-swatch10-color;
		font-family:@font-swatch10-font-family;
		font-weight: @font-swatch10-font-weight;
		line-height:@font-swatch10-line-height;
		letter-spacing: @font-swatch10-letter-spacing;
		font-size: @font-swatch10-font-size;
	}
}

p,
.contactform label,
.twitter ul li a,
.twitter ul li time,
.signupform label {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
}

blockquote {
	font-style: italic;
	font-size: bkscale(@font-swatch5-font-size, 1.2);
	line-height: bkscale(@font-swatch5-line-height, 1.2);
	background: lighten(@color-swatch2, 50%);
	border-radius: 2px;
	&:before {
		left: 8px;
		color: @color-swatch2;
	}
}

a,
.widget.twitter a,
.widget.twitter ul li a,
.widget.twitter ul li span a {
	color: @color-swatch2;
	text-decoration: none;
	&:hover {
		color: darken(@color-swatch2, 30%);
		text-decoration: none;
	}
}

.main {
	clear: both;
	padding: 0 40px;
	h1, h2, h3, h4, h5 ,h6 {
		a {
			text-decoration: none;
		}
	}
}

.page-wrap {
	background-color: @color-swatch1;
	float: left;
	width: 70%;
	margin-left: 30%;
	min-height: 100%;
	box-shadow: 0 -1px 2px fadeout(@color-swatch4, 40%);
}

hr.line {
	background-color: lighten(@color-swatch5, 50%)
}

// 2. Header
.template-header {
	padding: 40px;
	text-align: center;
	position: fixed;
	overflow-x: hidden;
	overflow-y: scroll;
	float: left;
	left: 0;
	height: 100%;
	width: 30%;
	color: @color-swatch1;
	background-color: fadeout(@color-swatch2, 50%);
	text-shadow: 0 1px 2px fadeout(@color-swatch4, 40%);
	.widget.profile {
		font-family:@font-swatch9-font-family;
		font-weight: @font-swatch9-font-weight;
		color:@font-swatch9-color;
		line-height:@font-swatch9-line-height;
		letter-spacing: @font-swatch9-letter-spacing;
		font-size: @font-swatch9-font-size;
	}
	.widget.profile .bk-profile-socialicons span a {
		background-color: transparent;
		border: none;
		-webkit-filter: drop-shadow(0 0 2px fadeout(@color-swatch4, 30%));
		-webkit-transition: .2s;
		&:hover {
			background-color: transparent;
			border: none;
			-webkit-filter: drop-shadow(0 0 2px fadeout(@color-swatch1, 30%));
		}
	}
}

.feature-btn {
	display: block;
}
/* ... */

